feat: get ideas within the week
