# doc/api.yaml
@@ -30,6 +30,36 @@ paths:
           $ref: '#/components/responses/404'
         '500':
           $ref: '#/components/responses/500'
+  '/user/{user_id}':
+    get:
+      tags:
+        - User
+      summary: Get user by id
+      description: get individual user
+      operationId: GetUserById
+      parameters:
+        - name: user_id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Individual User
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserInfo'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
 
   '/auth/login':
     post:
@@ -225,6 +255,34 @@ paths:
           $ref: '#/components/responses/403'
         '404':
           $ref: '#/components/responses/404'
+        '500':
+          $ref: '#/components/responses/500'
+    get:
+      tags:
+        - Idea
+      summary: Get all funds of an idea
+      operationId: getfundsByIdeaId
+      parameters:
+        - name: idea_id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        '200':
+          description: List of filtered funds.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Funds'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
   '/ideas/{idea_id}/comments':
