# src/main/java/com/starteo/demo/endpoint/controller/FundController.java
@@ -1,11 +1,13 @@
 package com.starteo.demo.endpoint.controller;
 
 import com.starteo.demo.endpoint.rest.mapper.FundMapper;
+import com.starteo.demo.endpoint.rest.mapper.IdeaMapper;
 import com.starteo.demo.endpoint.rest.model.CreateFund;
 import com.starteo.demo.endpoint.rest.model.Fund;
 import com.starteo.demo.repository.model.User;
 import com.starteo.demo.service.AuthService;
 import com.starteo.demo.service.FundService;
+import com.starteo.demo.service.IdeaService;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.CrossOrigin;
@@ -22,6 +24,8 @@ import java.util.List;
 public class FundController {
   private FundService fundService;
   private FundMapper fundMapper;
+  private IdeaMapper ideaMapper;
+  private IdeaService ideaService;
   private AuthService authService;
 
   @PutMapping("/funds/{idea_id}")
@@ -29,5 +33,9 @@ public class FundController {
     User userConnected = authService.whoami(request);
     com.starteo.demo.repository.model.Fund created = fundService.saveFundByIdeaId(toCreate, ideaString, userConnected);
     return List.of(fundMapper.toRest(created));
+  }
+  @GetMapping("/funds/{idea_id}")
+  public List<Fund> getAllFundSOnIdea(@PathVariable("idea_id")String ideaString,HttpServletRequest request){
+    return fundService.getFundsByIdea(ideaService.getById(ideaString)).stream().map(fundMapper::toRest).toList();
   }
 }
