# src/main/java/com/starteo/demo/endpoint/controller/UserController.java
@@ -6,30 +6,36 @@ import com.starteo.demo.endpoint.rest.model.SignUp;
 import com.starteo.demo.endpoint.rest.model.Signin;
 import com.starteo.demo.endpoint.rest.model.UserInfo;
 import com.starteo.demo.service.AuthService;
+import com.starteo.demo.service.UserService;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
-@RequestMapping("/auth")
 @AllArgsConstructor
 @CrossOrigin(origins = "*")
 public class UserController {
   private final UserMapper mapper;
+  private final UserService userService;
   private final AuthService service;
 
-  @PostMapping("/signup")
+  @PostMapping("/auth/signup")
   public UserInfo signUp(@RequestBody SignUp auth) {
     return mapper.toDto(service.signUp(auth));
   }
 
-  @PostMapping("/login")
+  @PostMapping("/auth/login")
   public LoggedUser signIn(@RequestBody Signin toAuthenticate) {
     return service.signIn(toAuthenticate);
   }
 
-  @GetMapping("/whoami")
+  @GetMapping("/auth/whoami")
   public UserInfo whoami(HttpServletRequest request) {
     return mapper.toDto(service.whoami(request));
+  }
+
+  @GetMapping("/user/{user_id}")
+  public UserInfo getUserById(@PathVariable("user_id") String userId){
+    return mapper.toDto(userService.getUserById(userId));
   }
 }
